# tenancy

./: .gitignore  MANIFEST.in  README.md  __init__.py  pyproject.toml
templates/admin/tenancy/: create_tenant.html
tenancy/: admin.py  apps.py  auth.py  backends.py  checks.py  context.py  forms.py  managers.py  middleware.py  mixins.py  models.py  roles.py  services.py  signals.py  utils.py  warnings.py
tenancy/management/commands/: assign_first_tenant_to_models.py  bootstrap_first_tenant.py  debug_permissions.py
tenancy/migrations/: 002_add_tenant_to_user.py
tenancy/templates/admin/auth/user/: change_form.html  change_list.html
tenancy/templates/admin/tenancy/: create_tenant.html  super_index.html
