[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tenancy"
version = "0.1.0"
description = "A reusable Django app named tenancy."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Your Name" }
]
dependencies = [
  "django>=4.0"
]

[project.urls]
Homepage = "https://github.com/ArtoLabs/tenancy.git"
Repository = "https://github.com/ArtoLabs/tenancy.git"

[tool.setuptools.packages.find]
include = ["tenancy*"]
